수강생의 과목별 평균 등급 출력 기능 완성